将品牌页面的js拆分

--- a/pa-manager-web/src/main/webapp/admin/brand.html
+++ b/pa-manager-web/src/main/webapp/admin/brand.html
@@ -14,99 +14,9 @@
 	<script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
 	<script src="../plugins/angularjs/pagination.js"></script>
     <link rel="stylesheet" href="../plugins/angularjs/pagination.css">
-	<script type="text/javascript">
-		var app=angular.module('youlexuan', ['pagination']);
-		app.controller('brandController' ,function($scope,$http){
-			$scope.findAll=function(){
-				$http.get('../brand/findAll.do').success(
-					function(response){
-						$scope.list=response;
-					}
-				);
-			};
-
-            //分页控件配置
-            $scope.paginationConf = {
-                currentPage: 1,
-                totalItems: 10,
-                itemsPerPage: 10,
-                perPageOptions: [10, 20, 30, 40, 50],
-                onChange: function () {
-                    $scope.selectids = new Set();
-                    $scope.reloadList();//重新加载
-                }
-            };
-
-            $scope.reloadList = function () {
-                //$scope.findPage($scope.paginationConf.currentPage, $scope.paginationConf.itemsPerPage);
-                $scope.search( $scope.paginationConf.currentPage, $scope.paginationConf.itemsPerPage);
-            };
-
-            $scope.findPage = function (page, rows) {
-                $http.get('../brand/findPage.do?page=' + page + '&rows=' + rows).success(
-                    function (response) {
-                        $scope.list = response.rows;
-                        $scope.paginationConf.totalItems = response.total;//更新总记录数
-                    }
-                );
-            };
-
-            $scope.save = function () {
-                var methodName = "add";
-                if($scope.entity.id!=null){
-                    methodName = "update";
-				}
-
-				$http.post("../brand/"+methodName+".do",$scope.entity).success(function (responce) {
-					if (responce.success){
-					    $scope.reloadList();
-					} else{
-					    alert(responce.msg);
-					}
-                })
-            };
-
-            $scope.findOne = function (id) {
-				$http.get("../brand/findOne.do?id="+id).success(function (responce) {
-					$scope.entity = responce;
-                })
-            };
-
-            $scope.selectids = new Set();
-			$scope.updateSelection = function($event,id){
-                if($event.target.checked){
-                    $scope.selectids.add(id);
-				}else{
-					$scope.selectids.delete(id);
-				}
-			};
-			
-			$scope.dele = function () {
-			    var list = [];
-			    $scope.selectids.forEach(function (id) {
-                    list.push(id);
-                });
-				$http.get("../brand/delete.do?ids="+list).success(function (response) {
-					if(response.success){
-					    $scope.reloadList();
-					}else{
-					    alert(response.message);
-					}
-                })
-            };
-
-			$scope.searchEntity = {};
-            $scope.search=function(page,rows){
-                $http.post('../brand/search.do?page='+page+"&rows="+rows, $scope.searchEntity).success(
-                    function(response){
-                        $scope.paginationConf.totalItems=response.total;//总记录数
-                        $scope.list=response.rows;//给列表变量赋值
-                    }
-                );
-            }
-
-		});
-    </script>
+	<script type="text/javascript" src="../js/base_paginations.js"></script>
+	<script type="text/javascript" src="../js/service/brandService.js"></script>
+	<script type="text/javascript" src="../js/controller/brandController.js"></script>
     
 </head>
 <body class="hold-transition skin-red sidebar-mini" ng-app="youlexuan" ng-controller="brandController">
