--- a/pa-manager-web/src/main/webapp/admin/specification.html
+++ b/pa-manager-web/src/main/webapp/admin/specification.html
@@ -39,7 +39,7 @@
             <div class="form-group form-inline">
                 <div class="btn-group">
                     <button type="button" class="btn btn-default" title="新建" data-toggle="modal"
-                            data-target="#editModal" ng-click="entity={'specificationOptionList': []}"><i class="fa fa-file-o"></i> 新建
+                            data-target="#editModal" ng-click="pageObj.entity={'specificationOptionList': []}"><i class="fa fa-file-o"></i> 新建
                     </button>
                     <button type="button" class="btn btn-default" title="删除" ng-click="dele()"><i
                             class="fa fa-trash-o"></i> 删除
@@ -53,7 +53,7 @@
         </div>
         <div class="box-tools pull-right">
             <div class="has-feedback">
-                规格名称：<input ng-model="searchEntity.specName">
+                规格名称：<input ng-model="pageObj.searchEntity.specName">
                 <button class="btn btn-default" ng-click="reloadList()">查询</button>
             </div>
         </div>
@@ -72,7 +72,7 @@
             </thead>
 
             <tbody>
-            <tr ng-repeat="entity in list">
+            <tr ng-repeat="entity in pageObj.list">
                 <td><input type="checkbox" ng-click="updateSelection($event,entity.id)"></td>
                 <td>{{entity.id}}</td>
                 <td>{{entity.specName}}</td>
@@ -85,7 +85,7 @@
             </tbody>
         </table>
         <!--数据列表/-->
-        <tm-pagination conf="paginationConf"></tm-pagination>
+        <tm-pagination conf="pageObj.conf"></tm-pagination>
     </div>
     <!-- 数据表格 /-->
 </div>
@@ -105,7 +105,7 @@
                 <table class="table table-bordered table-striped" width="800px">
                     <tr>
                         <td>规格名称</td>
-                        <td><input ng-model="entity.specification.specName" class="form-control" placeholder="规格名称">
+                        <td><input ng-model="pageObj.entity.specification.specName" class="form-control" placeholder="规格名称">
                         </td>
                     </tr>
                 </table>
@@ -115,7 +115,6 @@
                     <button type="button" class="btn btn-default" title="新建" ng-click="addTableRow()"><i
                             class="fa fa-file-o"></i> 新增规格选项
                     </button>
-
                 </div>
 
                 <table class="table table-bordered table-striped table-hover dataTable">
@@ -126,11 +125,8 @@
                         <th class="sorting">操作</th>
                     </tr>
                     </thead>
-
-
                     <tbody>
-
-                    <tr ng-repeat="pojo in entity.specificationOptionList">
+                    <tr ng-repeat="pojo in pageObj.entity.specificationOptionList">
                         <td>
                             <input ng-model="pojo.optionName" class="form-control" placeholder="规格选项">
                         </td>
