--- a/pa-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pa-shop-web/src/main/webapp/admin/goods_edit.html
@@ -35,7 +35,8 @@
     <script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
     <script type="text/javascript" src="../js/base.js"></script>
     <script type="text/javascript" src="../js/service/goodsService.js"></script>
-
+    <script type="text/javascript" src="../js/service/typeTemplateService.js"></script>
+    <script type="text/javascript" src="../js/service/itemCatService.js"></script>
     <script type="text/javascript" src="../js/service/uploadService.js"></script>
 
     <script type="text/javascript" src="../js/controller/baseController.js"></script>
@@ -44,7 +45,8 @@
 
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="youlexuan" ng-controller="goodsController">
+<body class="hold-transition skin-red sidebar-mini" ng-app="youlexuan" ng-controller="goodsController"
+      ng-init="selectItemCat1List()">
 
 <!-- 正文区域 -->
 <section class="content">
@@ -83,17 +85,20 @@
                             <table>
                                 <tr>
                                     <td>
-                                        <select class="form-control">
+                                        <select class="form-control" ng-model="entity.goods.category1Id"
+                                                ng-options="item.id as item.name for item in itemCat1List">
                                         </select>
                                     </td>
                                     <td>
-                                        <select class="form-control select-sm"></select>
+                                        <select class="form-control select-sm" ng-model="entity.goods.category2Id"
+                                                ng-options="item.id as item.name for item in itemCat2List"></select>
                                     </td>
                                     <td>
-                                        <select class="form-control select-sm"></select>
+                                        <select class="form-control select-sm" ng-model="entity.goods.category3Id"
+                                                ng-options="item.id as item.name for item in itemCat3List"></select>
                                     </td>
                                     <td>
-                                        模板ID:19
+                                        模板ID:{{entity.goods.typeTemplateId}}
                                     </td>
                                 </tr>
                             </table>
@@ -109,7 +114,8 @@
 
                         <div class="col-md-2 title">品牌</div>
                         <div class="col-md-10 data">
-                            <select class="form-control"></select>
+                            <select class="form-control" ng-model="entity.goods.brandId"
+                                    ng-options="item.id as item.text for item in typeTemplate.brandIds"></select>
                         </div>
 
                         <div class="col-md-2 title">副标题</div>
@@ -209,18 +215,18 @@
                 <!--扩展属性-->
                 <div class="tab-pane" id="customAttribute">
                     <div class="row data-type">
-                        <div>
-                            <div class="col-md-2 title">扩展属性1</div>
+                        <div ng-repeat="pojo in entity.goodsDesc.customAttributeItems">
+                            <div class="col-md-2 title">{{pojo.text}}</div>
                             <div class="col-md-10 data">
-                                <input class="form-control" placeholder="扩展属性1">
+                                <input class="form-control" ng-model="pojo.value" placeholder="{{pojo.text}}">
                             </div>
                         </div>
-                        <div>
+                        <!--<div>
                             <div class="col-md-2 title">扩展属性2</div>
                             <div class="col-md-10 data">
                                 <input class="form-control" placeholder="扩展属性2">
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
 
@@ -238,38 +244,25 @@
 
                         <div class="row data-type">
 
-                            <div>
-                                <div class="col-md-2 title">屏幕尺寸</div>
+                            <div ng-repeat="pojo in specList">
+                                <div class="col-md-2 title">{{pojo.text}}</div>
                                 <div class="col-md-10 data">
-					                               
-					                            <span>
-					                            	<input type="checkbox">4.0
-					                            </span>
-                                    <span>
-					                            	<input type="checkbox">4.5
-					                            </span>
-                                    <span>
-					                            	<input type="checkbox">5.0
-					                            </span>
-
+                                    <span ng-repeat="option in pojo.options">
+                                        <input type="checkbox"
+                                               ng-click="updateSpecAttribute($event,pojo.text,option.optionName);createItemList()">{{option.optionName}}
+                                    </span>
                                 </div>
                             </div>
-                            <div>
+                            <!--<div>
                                 <div class="col-md-2 title">网络制式</div>
                                 <div class="col-md-10 data">
-					                               
-					                            <span>
-					                            	<input type="checkbox">2G
-					                            </span>
-                                    <span>
-					                            	<input type="checkbox">3G
-					                            </span>
-                                    <span>
-					                            	<input type="checkbox">4G
-					                            </span>
+
+                                    <span><input type="checkbox">2G</span>
+                                    <span><input type="checkbox">3G</span>
+                                    <span><input type="checkbox">4G</span>
 
                                 </div>
-                            </div>
+                            </div>-->
 
                         </div>
 
@@ -278,8 +271,11 @@
                             <table class="table table-bordered table-striped table-hover dataTable">
                                 <thead>
                                 <tr>
-                                    <th class="sorting">屏幕尺寸</th>
-                                    <th class="sorting">网络制式</th>
+                                    <!--<th class="sorting">屏幕尺寸</th>-->
+                                    <!--<th class="sorting">网络制式</th>-->
+                                    <th class="sorting" ng-repeat="item in entity.goodsDesc.specificationItems">
+                                        {{item.attributeName}}
+                                    </th>
                                     <th class="sorting">价格</th>
                                     <th class="sorting">库存</th>
                                     <th class="sorting">是否启用</th>
@@ -287,27 +283,26 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td>
-                                        4.0
+                                <tr ng-repeat="pojo in entity.itemList">
+                                    <td ng-repeat="item in entity.goodsDesc.specificationItems">
+                                        {{pojo.spec[item.attributeName]}}
                                     </td>
                                     <td>
-                                        3G
+                                        <input class="form-control" ng-model="pojo.price" placeholder="价格">
                                     </td>
                                     <td>
-                                        <input class="form-control" placeholder="价格">
+                                        <input class="form-control" ng-model="pojo.num" placeholder="库存数量">
                                     </td>
                                     <td>
-                                        <input class="form-control" placeholder="库存数量">
+                                        <input type="checkbox" ng-model="pojo.status" ng-true-value="1"
+                                               ng-false-value="0">
                                     </td>
                                     <td>
-                                        <input type="checkbox">
-                                    </td>
-                                    <td>
-                                        <input type="checkbox">
+                                        <input type="checkbox" ng-model="pojo.isDefault" ng-true-value="1"
+                                               ng-false-value="0">
                                     </td>
                                 </tr>
-                                <tr>
+                                <!--<tr>
                                     <td>
                                         4.0
                                     </td>
@@ -366,7 +361,7 @@
                                     <td>
                                         <input type="checkbox">
                                     </td>
-                                </tr>
+                                </tr>-->
 
                                 </tbody>
                             </table>
@@ -430,7 +425,9 @@
 
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="add_image_entity()">保存</button>
+                <button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="add_image_entity()">
+                    保存
+                </button>
                 <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
         </div>
